--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
 
         <service
-            android:name=".model.service.FlickrXMLService"
+            android:name=".model.service.DataService"
             android:enabled="true">
             <intent-filter>
                 <action android:name="com.robotoole.flickrlist.service.XMLService"/>
